# personal_finance

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
docker/: Dockerfile  docker-compose.yml
ios/: project.yml
ios/Clarity/: Info.plist
ios/Clarity.xcodeproj/: project.pbxproj
ios/Clarity.xcodeproj/xcshareddata/xcschemes/: Clarity.xcscheme
ios/Clarity/Sources/App/: ClarityApp.swift
ios/Clarity/Sources/Models/: Account.swift  Category.swift  Dashboard.swift  Debt.swift  Transaction.swift  User.swift
ios/Clarity/Sources/Services/: ApiService.swift
ios/Clarity/Sources/ViewModels/: AccountsViewModel.swift  AuthViewModel.swift  DashboardViewModel.swift  DebtsViewModel.swift  TransactionsViewModel.swift
ios/Clarity/Sources/Views/: AccountsView.swift  ContentView.swift  DashboardView.swift  DebtDetailView.swift  DebtFormView.swift  DebtsView.swift  LoginView.swift  SettingsView.swift  TransactionsView.swift
src/api/: auth.py  main.py  pages.py  pages_debts.py  templates.py
src/database/: session.py
src/database/alembic/: env.py  script.py.mako
src/domain/: models.py
src/frontend/static/css/: styles.css
src/frontend/templates/: base.html  dashboard.html  index.html
src/frontend/templates/accounts/: form.html  list.html
src/infrastructure/: database.py
src/services/: debt_engine.py  exceptions.py  financial_ledger.py  forecasting.py  insights.py
tests/: conftest.py  test_api.py  test_services.py
(+11 files in other folders)
